--- a/main.css
+++ b/main.css
@@ -1,3 +1,8 @@
+*{
+    box-sizing:content-box;
+    padding: 0;
+    margin: 0;
+}
 .TrungLH-input{
     height: 50px;
     width: 300px;
@@ -8,10 +13,29 @@
 }
 .TrungLH-btn{
     width: 150px;
-    height: 50px;
     margin: 10px;
+    border-radius: 10px;
+    border: 1px solid black;
+    text-align: center;
+    line-height: 50px;
 }
 .CheckArea textarea{
     line-height: 20px;
     white-space: nowrap;
+}
+.TrungLH-flex{
+    display: flex;
+}
+.flex-center{
+    justify-content: center;
+}
+.flex-space{
+    justify-content: space-between;
+}
+.TrungLH-nav{
+    text-decoration: none;
+    background-color: #78b6fd;
+}
+.TrungLH-nav:hover{
+    background-color: aquamarine;
 }
